--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav>
         <ul>
           <li class="logo">
-            <a href="#">WebStudio</a>
+            <a href="#">Web<span class="logo-color">Studio</span></a>
           </li>
           <li><a href="#" class="hover">Studio</a></li>
           <li class="padding-portfolio">
@@ -48,11 +48,11 @@
       </ul>
     </header>
     <main>
-      <section class="head-section-style">
+      <section class="head-section-style section">
         <h1>EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
         <button class="button-style">Request our service</button>
       </section>
-      <section class="info-section-style">
+      <section class="info-section-style section">
         <ul class="container">
           <li>
             <h3>ATTENTION TO DETAILS</h3>
@@ -84,30 +84,15 @@
           </li>
         </ul>
       </section>
-      <section class="about-us-style">
+      <section class="about-us-style section">
         <h2>What we do</h2>
         <div class="container">
-          <img
-            src="images/gr1.jpg"
-            alt="working place1"
-            width="370"
-            height="294"
-          />
-          <img
-            src="images/gr2.jpg"
-            alt="working place2"
-            width="370"
-            height="294"
-          />
-          <img
-            src="images/gr3.jpg"
-            alt="working place3"
-            width="370"
-            height="294"
-          />
+          <img src="images/gr1.jpg" alt="working place1" width="370" />
+          <img src="images/gr2.jpg" alt="working place2" width="370" />
+          <img src="images/gr3.jpg" alt="working place3" width="370" />
         </div>
       </section>
-      <section class="section-background img-size">
+      <section class="section-background img-size section">
         <h2>Our Team</h2>
         <div class="container">
           <figure class="white-box">
@@ -145,7 +130,7 @@
       <div class="container-footer">
         <ul>
           <li class="logo">
-            <a href="#">WebStudio</a>
+            <a href="#">Web<span class="footer-logo-color">Studio</span></a>
           </li>
         </ul>
         <address class="address-padding">
