--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       <nav>
         <ul>
           <li class="logo">
-            <a href="index.html">WebStudio</a>
+            <a href="index.html">Web<span class="logo-color">Studio</span></a>
           </li>
           <li><a href="#" class="hover">Studio</a></li>
           <li class="padding-portfolio">
@@ -51,7 +51,7 @@
       <hr />
     </div>
     <main>
-      <section class="padding-prop">
+      <section class="padding-prop section">
         <ul class="buttons-style container">
           <li>
             <button type="button" class="button-padding button-hover">
@@ -80,7 +80,7 @@
           </li>
         </ul>
       </section>
-      <section class="padding-settings">
+      <section class="padding-settings section">
         <ul class="container img-wrap">
           <li>
             <figure class="img-box">
@@ -89,7 +89,6 @@
                 src="images/portfolio1.jpg"
                 alt="Technoduck"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Technoduck
@@ -104,7 +103,6 @@
                 src="images/portfolio2.jpg"
                 alt="Poster New Orlean vs Golden Star"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Poster New Orlean vs Golden Star
@@ -119,7 +117,6 @@
                 src="images/portfolio3.jpg"
                 alt="Seafood Restaurant"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Seafood Restaurant
@@ -134,7 +131,6 @@
                 src="images/portfolio4.jpg"
                 alt="Project Prime"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Project Prime
@@ -149,7 +145,6 @@
                 src="images/portfolio5.jpg"
                 alt="Project Boxes"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Project Boxes
@@ -164,7 +159,6 @@
                 src="images/portfolio6.jpg"
                 alt="Inspiration has no Borders"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Inspiration has no Borders
@@ -179,7 +173,6 @@
                 src="images/portfolio7.jpg"
                 alt="Limited Edition"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Limited Edition
@@ -194,7 +187,6 @@
                 src="images/portfolio8.jpg"
                 alt="Project LAB"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Project LAB
@@ -209,7 +201,6 @@
                 src="images/portfolio9.jpg"
                 alt="Growing Business"
                 width="370"
-                height="294"
               />
               <figcaption class="figcaption-padding box-border">
                 Growing Business
@@ -224,7 +215,7 @@
       <div class="container-footer">
         <ul>
           <li class="logo">
-            <a href="#">WebStudio</a>
+            <a href="#">Web<span class="footer-logo-color">Studio</span></a></a>
           </li>
         </ul>
         <address class="address-padding">
