before svg optimalization

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <link href="css/styles.css" rel="stylesheet " />
+    <link href="images/icons.svg" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,14 +37,22 @@
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com"
-            ><span class="font-color hover">info@devstudio.com</span></a
-          >
+          <div class="nav-icon">
+            <svg width="16" height="12">
+              <use href="/images/icons.svg#icon-e-mail"></use>
+            </svg>
+            <a class="icon" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </div>
         </li>
         <li class="padding-tel">
-          <a href="tel:+1212-772-4150"
-            ><span class="font-color hover">+1 212-772-4150</span></a
-          >
+          <div class="nav-icon">
+            <svg width="10px" height="16px">
+              <use href="/images/icons.svg#icon-smartphone"></use>
+            </svg>
+            <a class="icon" href="tel:+1212-772-4150">+1 212-772-4150</a>
+          </div>
         </li>
       </ul>
     </header>
@@ -55,6 +64,11 @@
       <section class="info-section-style section">
         <ul class="container">
           <li>
+            <div class="info-icon-background">
+              <svg width="65" height="70">
+                <use href="/images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3>ATTENTION TO DETAILS</h3>
             <p>
               We go into all the details and processes of your business to
@@ -62,6 +76,11 @@
             </p>
           </li>
           <li>
+            <div class="info-icon-background">
+              <svg width="66" height="70">
+                <use href="/images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3>PUNCTUALITY</h3>
             <p>
               With us, you can feel safe and secure. An important principle of
@@ -69,6 +88,11 @@
             </p>
           </li>
           <li>
+            <div class="info-icon-background">
+              <svg width="70" height="70">
+                <use href="/images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3>PLANNING</h3>
             <p>
               You will be able to observe and participate in every phase of
@@ -76,6 +100,11 @@
             </p>
           </li>
           <li>
+            <div class="info-icon-background">
+              <svg width="70" height="70">
+                <use href="/images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3>modern technologies</h3>
             <p>
               We use innovative tools to solve assigned tasks. It's time to
@@ -97,48 +126,185 @@
         <div class="container">
           <figure class="white-box">
             <img src="images/christopher_walker.jpg" alt="Christopher Walker" />
-            <figcaption class="font-style-1">
+            <figcaption class="font-style-figacaption">
               Christopher Walker
-              <div>Product Designer</div>
+              <div class="font-style-position">Product Designer</div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-instagram"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-twitter"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-facebook"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </div>
             </figcaption>
           </figure>
           <figure class="white-box">
             <img src="images/kylie_evans.jpg" alt="Kylie Evans" />
-            <figcaption class="font-style-1">
+            <figcaption class="font-style-figacaption">
               Kylie Evans
-              <div>Frontend Developer</div>
+              <div class="font-style-position">Frontend Developer</div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-instagram"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-twitter"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-facebook"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </div>
             </figcaption>
           </figure>
           <figure class="white-box">
             <img src="images/ryan_harris.jpg" alt="Ryan Harris" />
-            <figcaption class="font-style-1">
+            <figcaption class="font-style-figacaption">
               Ryan Harris
-              <div>Marketing</div>
+              <div class="font-style-position">Marketing</div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-instagram"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-twitter"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-facebook"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </div>
             </figcaption>
           </figure>
           <figure class="white-box">
             <img src="images/tyler_moore.jpg" alt="Tyler Moore" />
-            <figcaption class="font-style-1">
+            <figcaption class="font-style-figacaption">
               Tyler Moore
-              <div>UI Designer</div>
+              <div class="font-style-position">UI Designer</div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-instagram"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-twitter"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-facebook"></use>
+                </svg>
+              </div>
+              <div class="app-icons">
+                <svg width="20" height="20">
+                  <use href="/images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </div>
             </figcaption>
           </figure>
+        </div>
+      </section>
+      <section class="section">
+        <h2>Nasi klienci</h2>
+        <div class="container">
+          <div class="company-icons">
+            <svg width="106" height="60">
+              <use href="/images/icons.svg#icon-company-1"></use>
+            </svg>
+          </div>
+          <div class="company-icons">
+            <svg width="106" height="60">
+              <use href="/images/icons.svg#icon-company-2"></use>
+            </svg>
+          </div>
+          <div class="company-icons">
+            <svg width="106" height="60">
+              <use href="/images/icons.svg#icon-company-3"></use>
+            </svg>
+          </div>
+          <div class="company-icons">
+            <svg width="106" height="60">
+              <use href="/images/icons.svg#icon-company-4"></use>
+            </svg>
+          </div>
+          <div class="company-icons">
+            <svg width="106" height="60">
+              <use href="/images/icons.svg#icon-company-5"></use>
+            </svg>
+          </div>
+          <div class="company-icons">
+            <svg width="106" height="60">
+              <use href="/images/icons.svg#icon-company-6"></use>
+            </svg>
+          </div>
         </div>
       </section>
     </main>
     <footer class="footer-background footer-style">
       <div class="container-footer">
-        <ul>
+        <ul class="find-us-placement">
           <li class="logo">
             <a href="#">Web<span class="footer-logo-color">Studio</span></a>
           </li>
+          <li><p class="find-us-style">find us on</p></li>
         </ul>
         <address class="address-padding">
           <ul class="address-style">
-            <li>
-              695 Park Ave, New York, NY 10065,<br />
-              United States
-            </li>
+            <div class="find-us-icons">
+              <li>695 Park Ave, New York, NY 10065,<br />United States</li>
+              <li class="find-us-icons-placment">
+                <div class="find-us-app-icons">
+                  <svg width="20" height="20">
+                    <use href="/images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="find-us-app-icons">
+                  <svg width="20" height="20">
+                    <use href="/images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="find-us-app-icons">
+                  <svg width="20" height="20">
+                    <use href="/images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="find-us-app-icons">
+                  <svg width="20" height="20">
+                    <use href="/images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </li>
+            </div>
             <li>
               <a href="mailto:info@devstudio.com" class="hover"
                 >info@devstudio.com</a
