--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       <nav>
         <ul>
           <li class="logo">
-            <a href="index.html">Web<span class="logo-color">Studio</span></a>
+            <a href="#">Web<span class="logo-color">Studio</span></a>
           </li>
           <li><a href="#" class="hover">Studio</a></li>
           <li class="padding-portfolio">
@@ -36,14 +36,22 @@
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com"
-            ><span class="font-color hover">info@devstudio.com</span></a
-          >
+          <div class="nav-icon">
+            <svg width="16" height="12">
+              <use href="/images/icons.svg#icon-e-mail"></use>
+            </svg>
+            <a class="icon" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </div>
         </li>
         <li class="padding-tel">
-          <a href="tel:+1212-772-4150"
-            ><span class="font-color hover">+1 212-772-4150</span></a
-          >
+          <div class="nav-icon">
+            <svg width="10px" height="16px">
+              <use href="/images/icons.svg#icon-smartphone"></use>
+            </svg>
+            <a class="icon" href="tel:+1212-772-4150">+1 212-772-4150</a>
+          </div>
         </li>
       </ul>
     </header>
@@ -213,17 +221,39 @@
     </main>
     <footer class="footer-background footer-style">
       <div class="container-footer">
-        <ul>
+        <ul class="find-us-placement">
           <li class="logo">
-            <a href="#">Web<span class="footer-logo-color">Studio</span></a></a>
+            <a href="#">Web<span class="footer-logo-color">Studio</span></a>
           </li>
+          <li><p class="find-us-style">find us on</p></li>
         </ul>
         <address class="address-padding">
           <ul class="address-style">
-            <li>
-              695 Park Ave, New York, NY 10065,<br />
-              United States
-            </li>
+            <div class="find-us-icons">
+              <li>695 Park Ave, New York, NY 10065,<br />United States</li>
+              <li class="find-us-icons-placment">
+                <div class="find-us-app-icons">
+                  <svg width="20" height="20">
+                    <use href="/images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="find-us-app-icons">
+                  <svg width="20" height="20">
+                    <use href="/images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="find-us-app-icons">
+                  <svg width="20" height="20">
+                    <use href="/images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="find-us-app-icons">
+                  <svg width="20" height="20">
+                    <use href="/images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </li>
+            </div>
             <li>
               <a href="mailto:info@devstudio.com" class="hover"
                 >info@devstudio.com</a
