--- a/portfolio.html
+++ b/portfolio.html
@@ -25,11 +25,11 @@
       <nav>
         <ul>
           <li class="logo">
-            <a href="#">Web<span class="logo-color">Studio</span></a>
+            <a href="index.html">Web<span class="logo-color">Studio</span></a>
           </li>
           <li><a href="#" class="hover">Studio</a></li>
           <li class="padding-portfolio">
-            <a href="portfolio.html" class="hover">Portfolio</a>
+            <a href="#" class="hover">Portfolio</a>
           </li>
           <li><a href="#" class="hover">Contacts</a></li>
         </ul>
