--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-03</title>
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
+    <title>goit-markup-hw-04</title>
+    <link rel="stylesheet" href="css/modern-normalize.min.css" />
     <link href="css/styles.css" rel="stylesheet " />
     <link href="images/icons.svg" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
