--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
           <li>
             <div class="info-icon-background">
               <svg width="66" height="70">
-                <use href="/images/icons.svg#icon-clock"></use>
+                <use
+                  href="/goit-markup-hw-04/images/icons.svg#icon-clock"
+                ></use>
               </svg>
             </div>
             <h3>PUNCTUALITY</h3>
