--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <li>
             <div class="info-icon-background">
               <svg width="70" height="70">
-                <use href="/images/icons.svg#icon-diagram"></use>
+                <use href="images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
             <h3>PLANNING</h3>
