--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
           <li>
             <div class="info-icon-background">
               <svg width="65" height="70">
-                <use href="/images/icons.svg#icon-antenna"></use>
+                <use
+                  href="/goit-markup-hw-04/images/icons.svg#icon-antenna"
+                ></use>
               </svg>
             </div>
             <h3>ATTENTION TO DETAILS</h3>
@@ -86,7 +88,9 @@
           <li>
             <div class="info-icon-background">
               <svg width="70" height="70">
-                <use href="images/icons.svg#icon-diagram"></use>
+                <use
+                  href="/goit-markup-hw-04/images/icons.svg#icon-diagram"
+                ></use>
               </svg>
             </div>
             <h3>PLANNING</h3>
@@ -98,7 +102,9 @@
           <li>
             <div class="info-icon-background">
               <svg width="70" height="70">
-                <use href="/images/icons.svg#icon-astronaut"></use>
+                <use
+                  href="/goit-markup-hw-04/images/icons.svg#icon-astronaut"
+                ></use>
               </svg>
             </div>
             <h3>modern technologies</h3>
@@ -127,22 +133,30 @@
               <div class="font-style-position">Product Designer</div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </div>
             </figcaption>
@@ -154,22 +168,30 @@
               <div class="font-style-position">Frontend Developer</div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </div>
             </figcaption>
@@ -181,22 +203,30 @@
               <div class="font-style-position">Marketing</div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </div>
             </figcaption>
@@ -208,22 +238,30 @@
               <div class="font-style-position">UI Designer</div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
+                  ></use>
                 </svg>
               </div>
               <div class="app-icons">
                 <svg width="20" height="20">
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use
+                    href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </div>
             </figcaption>
@@ -235,32 +273,44 @@
         <div class="container">
           <div class="company-icons">
             <svg width="106" height="60">
-              <use href="/images/icons.svg#icon-company-1"></use>
+              <use
+                href="/goit-markup-hw-04/images/icons.svg#icon-company-1"
+              ></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use href="/images/icons.svg#icon-company-2"></use>
+              <use
+                href="/goit-markup-hw-04/images/icons.svg#icon-company-2"
+              ></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use href="/images/icons.svg#icon-company-3"></use>
+              <use
+                href="/goit-markup-hw-04/images/icons.svg#icon-company-3"
+              ></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use href="/images/icons.svg#icon-company-4"></use>
+              <use
+                href="/goit-markup-hw-04/images/icons.svg#icon-company-4"
+              ></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use href="/images/icons.svg#icon-company-5"></use>
+              <use
+                href="/goit-markup-hw-04/images/icons.svg#icon-company-5"
+              ></use>
             </svg>
           </div>
           <div class="company-icons">
             <svg width="106" height="60">
-              <use href="/images/icons.svg#icon-company-6"></use>
+              <use
+                href="/goit-markup-hw-04/images/icons.svg#icon-company-6"
+              ></use>
             </svg>
           </div>
         </div>
@@ -281,22 +331,30 @@
               <li class="find-us-icons-placment">
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use href="/images/icons.svg#icon-instagram"></use>
+                    <use
+                      href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
+                    ></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use href="/images/icons.svg#icon-twitter"></use>
+                    <use
+                      href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
+                    ></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use href="/images/icons.svg#icon-facebook"></use>
+                    <use
+                      href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
+                    ></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use href="/images/icons.svg#icon-linkedin"></use>
+                    <use
+                      href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
+                    ></use>
                   </svg>
                 </div>
               </li>
