--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         <li>
           <div class="nav-icon">
             <svg width="16" height="12">
-              <use href="/images/icons.svg#icon-e-mail"></use>
+              <use href="/goit-markup-hw-04/images/icons.svg#icon-e-mail"></use>
             </svg>
             <a class="icon" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -48,7 +48,9 @@
         <li class="padding-tel">
           <div class="nav-icon">
             <svg width="10px" height="16px">
-              <use href="/images/icons.svg#icon-smartphone"></use>
+              <use
+                href="/goit-markup-hw-04/images/icons.svg#icon-smartphone"
+              ></use>
             </svg>
             <a class="icon" href="tel:+1212-772-4150">+1 212-772-4150</a>
           </div>
@@ -234,22 +236,30 @@
               <li class="find-us-icons-placment">
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use href="/images/icons.svg#icon-instagram"></use>
+                    <use
+                      href="/goit-markup-hw-04/images/icons.svg#icon-instagram"
+                    ></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use href="/images/icons.svg#icon-twitter"></use>
+                    <use
+                      href="/goit-markup-hw-04/images/icons.svg#icon-twitter"
+                    ></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use href="/images/icons.svg#icon-facebook"></use>
+                    <use
+                      href="/goit-markup-hw-04/images/icons.svg#icon-facebook"
+                    ></use>
                   </svg>
                 </div>
                 <div class="find-us-app-icons">
                   <svg width="20" height="20">
-                    <use href="/images/icons.svg#icon-linkedin"></use>
+                    <use
+                      href="/goit-markup-hw-04/images/icons.svg#icon-linkedin"
+                    ></use>
                   </svg>
                 </div>
               </li>
