--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li>
           <div class="nav-icon">
             <svg width="16" height="12">
-              <use href="/images/icons.svg#icon-e-mail"></use>
+              <use href="/goit-markup-hw-04/images/icons.svg#icon-e-mail"></use>
             </svg>
             <a class="icon" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -43,7 +43,9 @@
         <li class="padding-tel">
           <div class="nav-icon">
             <svg width="10px" height="16px">
-              <use href="/images/icons.svg#icon-smartphone"></use>
+              <use
+                href="/goit-markup-hw-04/images/icons.svg#icon-smartphone"
+              ></use>
             </svg>
             <a class="icon" href="tel:+1212-772-4150">+1 212-772-4150</a>
           </div>
